--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.2",
     "socket.io-client": "file:socket.io-client-4.7.2.tgz"
